--- a/reactApp/src/components/Stock/StockComponent.css
+++ b/reactApp/src/components/Stock/StockComponent.css
@@ -1,29 +1,41 @@
 .containerStock {
-    min-width: 90vw;
-    max-width: 90vw;
-    max-height: 50vh;
-    min-height: 50vh;
+    min-width: 90%;
+    max-width: 90%;
+    max-height: 70vh;
+    min-height: 70vh;
     overflow: auto;
-    border-right: 1px solid white;
-    border-left: 1px solid white;
     margin-left: 5%;
     border-radius: 5px;
-    box-shadow: 0px 0.2px 1px white;
 }
 
 .tittles {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     border-bottom: 1px solid rgba(215, 213, 213, 0.652);
-    width: 90vw;
-    height: 5vh;
+    width: 100%;
+    height: 6vh;
     align-items: center;
     font-family: 'Times New Roman', Times, serif;
-    font-weight: 100;
+    font-weight: 200;
+    font-size: 22px;
 }.tittles > div {
     margin-left: 1vw;
 }
 
+.student {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    height: 10vh;
+    align-items: center;
+}
+
+.student > div {
+    height: 100%;
+    display: grid;
+    place-items: center;
+    box-shadow: 0px 0.2px 1px white;
+    font-size: 18px;
+}
 
 /* .rojo{
     width: 50px;
