--- a/reactApp/src/components/SideBar/SideBar.css
+++ b/reactApp/src/components/SideBar/SideBar.css
@@ -1,9 +1,11 @@
 .sideBarContainer {
-    background-color: rgba(132, 0, 255, 0.507);
+    background-color: #0c1017;
     min-height: 92vh;
     max-height: 92vh;
     display: flex;
     flex-direction: column;
+    border-right: 1px solid rgb(73, 73, 73);
+    padding: calc(1 * var(--template-spacing));
 }
 
 .sideBarTop {
@@ -13,4 +15,69 @@
 .sideBarBottom {
     min-height: 11vh;
     background-color: aqua;
+}
+
+.sideBarTop {
+    display: grid;
+    grid-template-rows: 7% 7% 7%;
+    margin-top: 5%;
+}
+
+.sideBarTop > div {
+    height: 100%;
+    width: 85%;
+    padding-left: 5%;
+    color: rgb(154, 153, 153);
+    border-radius: 9px;
+
+    display: grid;
+    grid-template-columns: 15% 30%;
+    align-items: center;
+    margin-left: 5%;
+
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 1.1vw;
+    letter-spacing: 0.5px;
+    line-height: 1.43;
+}
+
+.sideBarTop > div:hover {
+    height: 100%;
+    width: 85%;
+    padding-left: 5%;
+    color: rgb(226, 226, 226);
+    border-radius: 9px;
+
+    display: grid;
+    grid-template-columns: 15% 30%;
+    align-items: center;
+    margin-left: 5%;
+
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 1.1vw;
+    letter-spacing: 0.5px;
+    line-height: 1.43;
+    background-color: rgba(48, 48, 48, 0.288);
+}
+
+.sideBarTop > div:active {
+    height: 100%;
+    width: 85%;
+    padding-left: 5%;
+    color: rgb(255, 255, 255);
+    border-radius: 9px;
+
+    display: grid;
+    grid-template-columns: 15% 30%;
+    align-items: center;
+    margin-left: 5%;
+
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 1.1vw;
+    letter-spacing: 0.5px;
+    line-height: 1.43;
+    background-color: rgba(88, 88, 88, 0.674);
 }
