--- a/reactApp/src/components/ToggleSwitch/ToggleSwitch.css
+++ b/reactApp/src/components/ToggleSwitch/ToggleSwitch.css
@@ -8,7 +8,6 @@
     display: flex;
     align-items: center;
 }
-
 .toggle_switch_container_day {
     width: 5vw;
     height: 5vh;
@@ -19,10 +18,9 @@
     display: flex;
     align-items: center;
 }
-
 .circleSwitchNight {
-    height: 30px;
-    width: 30px;
+    height: 22px;
+    width: 22px;
     border-radius: 50%;
     background-color: white;
     margin-left: 5px;
@@ -31,29 +29,22 @@
     justify-content: center;
     align-items: center;
 }
-
 .circleSwitchDay {
-    height: 30px;
-    width: 30px;
+    height: 22px;
+    width: 22px;
     border-radius: 50%;
     background-color: black;
-    margin-left: 50px;
+    margin-left: 40px;
     transition: all 0.3s ease-in-out;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
 .imgNight {
-    height: 100%;
-    width: 100%;
+    display: grid;
+    place-items: center;
     color: white;
-    animation: reverse 1s linear infinite;
 }
-
 .imgDay {
-    height: 100%;
-    width: 100%;
     color: black;
-    animation: reverse 1s linear infinite;
 }
