--- a/reactApp/src/index.css
+++ b/reactApp/src/index.css
@@ -7,22 +7,10 @@ body {
   margin: 0;
 }
 
-.bodyDay {
-  background-color: rgb(77, 74, 81);
-  color: white;
-  padding: 0;
-  margin: 0;
-}
-
-.bodyNight {
-  background-color: rgb(38, 36, 40);
-  color: white;
-  padding: 0;
-  margin: 0;
-}
-
-
 main {
   display: grid;
   grid-template-columns: 17% 83%;
+}
+.oculto {
+  display: none;
 }
