--- a/reactApp/src/components/NavPC/NavPC.css
+++ b/reactApp/src/components/NavPC/NavPC.css
@@ -1,13 +1,13 @@
 nav {
     display: grid;
     grid-template-columns: 79% 11% 10%;
-    background-color: rgba(0, 0, 255, 0.288);
+    background-color: #1b1a66;
     min-height: 8vh;
 }
 
 nav > div {
     color: white;
-    font-size: 10px;
+    font-size: 18px;
     display: flex;
     align-items: center;
     margin-left: 4vh;
