--- a/reactApp/src/index.css
+++ b/reactApp/src/index.css
@@ -2,6 +2,20 @@
   user-select: none;
 }
 
+*::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #1b1a66ab;
+  border-radius: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: rgba(158, 158, 158, 0.562);
+}
+
 body {
   padding: 0;
   margin: 0;
