--- a/reactApp/src/components/Stock/StockComponent.css
+++ b/reactApp/src/components/Stock/StockComponent.css
@@ -115,7 +115,7 @@
 
 .lupa {
     color: #007BFF;
-    font-size: 24px;
+    font-size: 22px;
     cursor: pointer;
     transition: color 0.3s ease, transform 0.3s ease;
     margin-right: 10px;
@@ -146,19 +146,22 @@
 .becado_no {
     place-items: center;
     border-radius: 20px;
-    background-color: rgba(92, 9, 9, 0.603);
+    background-color: rgb(77, 16, 16);
     width: 40px;
     max-height: 25px;
     margin-top: 9%;
-    color: red;
+    color: white;
+    font-family: Inter, sans-serif;
 }
 
 .becado_yes {
     place-items: center;
     border-radius: 20px;
-    background-color: rgba(44, 137, 64, 0.639);
+    background-color: rgb(28, 103, 45);
     width: 40px;
     max-height: 25px;
     margin-top: 9%;
-    color: rgb(74, 203, 74);
+    /* color: rgb(74, 203, 74); */
+    color: white;
+    font-family: Inter, sans-serif;
 }
