actualizacion del grafico

--- a/reactApp/src/components/Donut/Donut.css
+++ b/reactApp/src/components/Donut/Donut.css
@@ -82,3 +82,22 @@
     background-color: chocolate;
     border-radius: 10px;
 }
+
+.estadoStock {
+    font-weight: bold;
+    padding: 10px;
+    border-radius: 5px;
+  }
+  
+  .estadoAlto {
+    color: green;
+  }
+  
+  .estadoMedio {
+    color: yellow;
+  }
+  
+  .estadoBajo {
+    color: red;
+  }
+  
