--- a/reactApp/src/components/Ingredientes/Ingredientes.css
+++ b/reactApp/src/components/Ingredientes/Ingredientes.css
@@ -1,93 +1,147 @@
-/* Container styles */
+/* Ingredientes.css */
+
 .ingredient-container {
-    max-width: 600px;
-    margin: 20px auto;
+    max-width: 1000px;
+    margin: 0 auto;
     padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    background-color: #f9f9f9;
-}
-
-/* Heading styles */
-.ingredient-title {
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .ingredient-title {
     text-align: center;
-    color: #333;
-}
-
-.ingredient-list-title {
-    color: #555;
-}
-
-.ingredient-form {
+    font-size: 24px;
+    font-weight: 600;
     margin-bottom: 20px;
-}
-
-/* Form input styles */
-.ingredient-input {
-    width: calc(33% - 10px);
-    margin-right: 10px;
+    color: #333;
+  }
+  
+  .ingredient-form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: 30px;
+  }
+  
+  .ingredient-form h3 {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+  
+  .ingredient-input {
     padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    font-size: 16px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
     outline: none;
-    transition: border-color 0.3s;
-}
-
-.ingredient-input:focus {
+    transition: border-color 0.3s ease;
+    max-width: 8vw;
+  }
+  
+  .ingredient-input:focus {
     border-color: #007bff;
-}
-
-/* Button styles */
-.add-button, .update-button, .cancel-button, .edit-button, .delete-button {
+  }
+  
+  .add-button {
     padding: 10px 15px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.add-button {
-    background-color: #007bff;
-    color: white;
-}
-
-.add-button:hover {
-    background-color: #0056b3;
-}
-
-.edit-button {
+    font-size: 16px;
     background-color: #28a745;
     color: white;
-}
-
-.edit-button:hover {
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .add-button:hover {
     background-color: #218838;
-}
-
-.delete-button {
-    background-color: #dc3545;
-    color: white;
-}
-
-.delete-button:hover {
-    background-color: #c82333;
-}
-
-/* List styles */
-.ingredient-list {
-    list-style-type: none;
+  }
+  
+  .ingredient-list-title {
+    font-size: 20px;
+    margin-bottom: 15px;
+    text-align: center;
+    color: #333;
+  }
+  
+  .ingredient-list {
+    list-style: none;
     padding: 0;
-}
-
-.ingredient-item {
+    margin: 0;
+  }
+  
+  .ingredient-item {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    border-bottom: 1px solid #ddd;
-}
-
-.ingredient-item:last-child {
-    border-bottom: none;
-}
+    margin-bottom: 10px;
+    background-color: white;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    transition: box-shadow 0.3s ease;
+  }
+  
+  .ingredient-item:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .ingredient-item span {
+    font-size: 16px;
+    color: #333;
+  }
+  
+  .edit-button, .delete-button, .update-button, .cancel-button {
+    padding: 5px 10px;
+    font-size: 14px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .edit-button {
+    background-color: #007bff;
+    color: white;
+    max-width: 10vw;
+    padding: 12px;
+  }
+  
+  .edit-button:hover {
+    background-color: #0069d9;
+  }
+  
+  .delete-button {
+    background-color: #dc3545;
+    color: white;
+    max-width: 10vw;
+    padding: 12px;
+  }
+  
+  .delete-button:hover {
+    background-color: #c82333;
+  }
+  
+  .update-button {
+    background-color: #28a745;
+    color: white;
+    max-width: 10vw;
+    padding: 12px;
+  }
+  
+  .update-button:hover {
+    background-color: #218838;
+  }
+  
+  .cancel-button {
+    background-color: #6c757d;
+    color: white;
+    max-width: 10vw;
+    padding: 12px;
+  }
+  
+  .cancel-button:hover {
+    background-color: #5a6268;
+  }
+  
