--- a/reactApp/src/components/FormLogin/FormLogin.css
+++ b/reactApp/src/components/FormLogin/FormLogin.css
@@ -1,4 +1,4 @@
-form {
+/* form {
     background-color: #f5f5f5;
     padding: 20px;
     margin: 0 auto;
@@ -60,4 +60,4 @@ form {
     border-color: #4CAF50;
     outline: none;
     box-shadow: 0 0 5px rgba(76, 175, 80, 0.5);
-  }
+  } */
