--- a/reactApp/src/components/Stock/StockComponent.css
+++ b/reactApp/src/components/Stock/StockComponent.css
@@ -14,8 +14,8 @@
 
 .tittles {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    border-bottom: 1px solid rgba(215, 213, 213, 0.652);
+    grid-template-columns: 8% 20% 20% 20% 20%;
+    border-bottom: 1px solid rgb(61, 55, 55);
     width: 100%;
     height: 6vh;
     align-items: center;
@@ -32,12 +32,16 @@
     overflow: transparent;
 }
 
+.aprobarAsistencia {
+    cursor: pointer;
+}
+
 
 .student {
     display: grid;
-    grid-template-columns: 20% 30% 20% 20%; /* Ya que se van a implementar más cosas, no es necesario cambiar esto (Por el momento.) */
-    height: 10vh;
-    border-bottom: 1px solid white;
+    grid-template-columns: 10% 20% 20% 20% 20%; /* Ya que se van a implementar más cosas, no es necesario cambiar esto (Por el momento.) */
+    height: 12vh;
+    border-bottom: 1px solid rgb(61, 55, 55);
 }
 
 .student > div {
