--- a/reactApp/src/components/SideBar/SideBar.css
+++ b/reactApp/src/components/SideBar/SideBar.css
@@ -31,7 +31,7 @@
 
 .sideBarTop {
     display: grid;
-    grid-template-rows: 7% 7% 7% 7%;
+    grid-template-rows: 7% 7% 7% 7% 7%;
     margin-top: 5%;
 }
 
