Actualizacion del apartado de asistencias de acuerdo a la fecha del LocalStorage.

--- a/reactApp/src/components/Stock/StockComponent.css
+++ b/reactApp/src/components/Stock/StockComponent.css
@@ -8,6 +8,10 @@
     font-family: sans-serif;
 }
 
+.almuerzoIcon {
+    cursor: pointer;
+}
+
 .containerAll {
     display: grid;
     grid-template-rows: 12% 88%;
