--- a/reactApp/src/index.css
+++ b/reactApp/src/index.css
@@ -2,6 +2,10 @@
   user-select: none;
 }
 
+body {
+  max-width: 100vw;
+} 
+
 *::-webkit-scrollbar {
   width: 10px;
   height: 10px;
@@ -40,3 +44,42 @@ main {
 .oculto {
   display: none;
 }
+
+/* --------------------------------------------------------------------------------------------------------------------------------- */
+/* --------------------------------------------------------------------------------------------------------------------------------- */
+/* --------------------------------------------------------------------------------------------------------------------------------- */
+
+@media (min-width: 320px) and (max-width: 374px) {
+
+}
+/*  */
+
+
+@media (min-width: 375px) and (max-width: 424px) { 
+
+}
+/*  */
+
+
+@media (min-width: 425px) and (max-width: 767px) {
+
+}
+/*  */
+
+
+@media (min-width: 768px) and (max-width: 1023px) {
+
+}
+/*  */
+
+
+@media (min-width: 1024px) and (max-width: 1439px) {
+
+}
+/*  */
+
+
+@media (min-width: 1440px) and (max-width: 1920px) {
+
+}
+/*  */
