--- a/reactApp/src/components/Stock/StockComponent.css
+++ b/reactApp/src/components/Stock/StockComponent.css
@@ -6,7 +6,7 @@
     margin-left: 3%;
     border-radius: 5px;
     font-family: sans-serif;
-}   
+}
 /*  */
 .almuerzoIcon {
     display: flex;
@@ -60,14 +60,12 @@
     opacity: 0.8;
     padding-right: 30%;
 }
-
 /*  */
 .containerAll {
     display: grid;
     grid-template-rows: 12% 88%;
     height: 440px;
 }
-
 .tittles {
     display: grid;
     grid-template-columns: 5% 20% 15% 19% 13% 15% 16% 10%;
@@ -82,10 +80,9 @@
     display: grid;
     place-items: center;
 }
-
 .student {
     display: grid;
-    grid-template-columns: 5% 20.3% 15.1% 19% 13.3% 15.1% 16.1% 10%;
+    grid-template-columns: 8% 23.3% 17.1% 17% 1.3% 15.1% 25.1% 10%;
     width: 100%;
     height: 10vh;
     border-bottom: 1px solid rgba(108, 108, 108, 0.194);
@@ -93,38 +90,31 @@
 }.student:hover {
     background-color: #7d7d7d11;
 }
-
 .student > div {
     /* border-right: 1px solid red;
     border-left: 1px solid red; */
     /* padding-left: 30%; */
 }
-
 /* Tengo que poner id y almuerzo en text align center. */
-
 .students {
     max-height: 75vh;
     overflow: auto;
     overflow: transparent;
 }
-
 .aprobarAsistencia {
     cursor: pointer;
 }
-
 .student > div {
     height: 100%;
     display: grid;
     align-items: center;
     font-size: 14px;
 }
-
 .search-container {
     display: flex;
     width: 40vw;
     justify-content: space-around;
 }
-  
   .search_input {
     border-radius: 20px;
     height: 4.5vh;
@@ -138,35 +128,30 @@
     background-color: rgba(0, 0, 0, 0);
     color: unset;
   }
-  
   .search_input:hover {
     border-color: #007BFF;
     box-shadow: 0 0 10px rgba(0, 123, 255, 0.4);
   }
-  
   .search_input::placeholder {
     color: #aaa;
     font-style: italic;
   }
-  
   .lupa {
     color: #007bffb3;
     cursor: pointer;
     transition: color 0.3s ease, transform 0.3s ease;
   }
-  
   .lupa:hover {
-    color: #0056b3;
+    color: #0056B3;
   }
 .containerFormStock {
     display: flex;
     align-items: center;
     background-color: rgba(32, 29, 35, 0);
-    border-bottom: 1px solid #68727d;
+    border-bottom: 1px solid #68727D;
     padding: 8px 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0);
 }
-
 .selectBeca {
     width: 9vw;
     height: 7vh;
