--- a/reactApp/src/components/Stock/StockComponent.css
+++ b/reactApp/src/components/Stock/StockComponent.css
@@ -31,6 +31,12 @@
     border-radius: 50%;
     margin-bottom: 7%;
 }
+.almorzado_S {
+    color: #3B82F6;
+}
+.almorzado_N {
+    color: grey;
+}
 /*  */
 .actionsIcon {
     display: flex;
@@ -64,7 +70,7 @@
 .containerAll {
     display: grid;
     grid-template-rows: 12% 88%;
-    height: 440px;
+    height: 530px;
 }
 .tittles {
     display: grid;
@@ -82,7 +88,7 @@
 }
 .student {
     display: grid;
-    grid-template-columns: 8% 23.3% 17.1% 17% 1.3% 15.1% 25.1% 10%;
+    grid-template-columns: 5% 20.3% 15.1% 19% 13.3% 15.1% 16.1% 10%;
     width: 100%;
     height: 10vh;
     border-bottom: 1px solid rgba(108, 108, 108, 0.194);
@@ -168,4 +174,6 @@
     box-shadow: 0 0 10px rgba(0, 123, 255, 0.4);
 }option {
     color: black;
+}
+.modalInfoStudent {
 }
